# MuteApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  MuteApp.sln  Publish.bat  README.md  build.rs  vcpkg.json
.github/workdlows/: build.yml
.github/workflows/: build.yml
MuteApp/: .clang-format  .editorconfig  ConfigFile.cpp  ConfigFile.hpp  HotKey.cpp  HotKey.hpp  Main.cpp  MuteApp.rc  MuteApp.vcxproj  MuteApp.vcxproj.filters
src/: Audio.cpp  Audio.hpp  MuteApp.manifest  MuteApp.rc  NotifyIcon.cpp  NotifyIcon.hpp  audio.rs  config.rs  indicator.rs  main.rs  pch.h  resource.h  win.rs
