[package]
name = "muteapp"
version = "2.0.0-beta"
edition = "2024"
description = "Mute or unmute the foreground application with a global hotkey."
build = "build.rs"

[[bin]]
name = "MuteApp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
ctrlc = "3.5.2"
global-hotkey = "0.8.0"
resvg = { version = "0.47.0", default-features = false }
tray-icon = { version = "0.24.0", default-features = false }

[dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Devices_FunctionDiscovery",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_Audio",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winresource = "0.1.31"

[package.metadata.winresource]
FileDescription = "MuteApp"
ProductName = "MuteApp"
OriginalFilename = "MuteApp.exe"
InternalName = "MuteApp"
Comments = "Mute or unmute the foreground application with a global hotkey."
